[package]
name = "zemu-grpc-server"
version = "0.1.0"
authors = ["linfeng <linfeng@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
ledger-zemu = { package = "ledger-transport-zemu", path = "../../ledger-transport-zemu" }
